# psy_faust

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
psy_faust/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
psy_faust/migrations/: 0001_initial.py  0002_alter_qualifications_options_and_more.py  0003_alter_qualifications_img.py  0004_faq.py  0005_alter_faq_options.py  0006_contacts.py  0007_rename_email_contacts_email_and_more.py  0008_alter_faq_title.py  0009_services.py  0010_alter_services_price_alter_services_time.py
static/css/: style.css
static/js/: mobile-header.js
templates/: index.html
templates/FAQ/: FAQ.html
templates/about/: about.html
templates/cases/: cases.html
templates/contacts/: contacts.html
templates/footer/: footer.html
templates/header/: header.html
templates/meta/: meta.html
templates/services/: services.html
templates/timeline/: timeline.html
templates/viewport/: viewport.html
